<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toEndOf="@id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="18dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNameAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            app:helperText="@string/helper_required"
            app:endIconMode="clear_text"
            app:counterMaxLength="@integer/counter_max_name"
            app:counterEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_person">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etNameAcc"
                android:maxLength="@integer/counter_max_name"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilApePat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_apepat"
            app:helperText="@string/helper_required"
            app:endIconMode="clear_text"
            app:counterMaxLength="@integer/counter_max_name"
            app:counterEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_person">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etApePat"
                android:maxLength="@integer/counter_max_name"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilApeMat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_apemat"
            app:helperText="@string/helper_required"
            app:endIconMode="clear_text"
            app:counterMaxLength="@integer/counter_max_name"
            app:counterEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_person">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etApeMat"
                android:maxLength="@integer/counter_max_name"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_edad"
            app:helperText="@string/helper_required"
            app:endIconMode="clear_text"
            app:counterMaxLength="@integer/counter_max_edad"
            app:counterEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_person">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etEdad"
                android:maxLength="@integer/counter_max_name"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_direccion"
            app:helperText="@string/helper_required"
            app:endIconMode="clear_text"
            app:counterMaxLength="@integer/counter_max_direccion"
            app:counterEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_location">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etDireccion"
                android:maxLength="@integer/counter_max_direccion"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilColonia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_colonia"
            app:helperText="@string/helper_required"
            app:endIconMode="clear_text"
            app:counterMaxLength="@integer/counter_max_colonia"
            app:counterEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_location">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etColonia"
                android:maxLength="@integer/counter_max_colonia"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_estado"
            app:helperText="@string/helper_required"
            app:endIconMode="clear_text"
            app:counterMaxLength="@integer/counter_max_estado"
            app:counterEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_location">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etEstado"
                android:maxLength="@integer/counter_max_estado"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPoblacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_poblacion"
            app:helperText="@string/helper_required"
            app:endIconMode="clear_text"
            app:counterMaxLength="@integer/counter_max_colonia"
            app:counterEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_poblacion">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etPoblacion"
                android:maxLength="@integer/counter_max_colonia"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCPostal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_postal"
            app:helperText="@string/helper_required"
            app:endIconMode="clear_text"
            app:counterMaxLength="@integer/counter_max_colonia"
            app:counterEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_location">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etCPostal"
                android:maxLength="@integer/counter_max_colonia"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            app:helperText="@string/helper_required"
            app:endIconMode="clear_text"
            app:counterMaxLength="@integer/counter_max_email"
            app:counterEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_email">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etEmail"
                android:maxLength="@integer/counter_max_email"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/hint_phone"
            app:helperText="@string/helper_required"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@integer/counter_max_phone"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>